# NPU

./: .gitignore  README.md  accelerator-repository-blueprint.css  accelerator-repository-blueprint.html  analog-cim-architecture-detail.css  analog-cim-architecture.html  analog-cim-architecture.js  analog-cim-board-bringup.html  analog-cim-bringup.css  analog-cim-codesign.css  analog-cim-evidence.html  analog-cim-evidence.js  analog-cim-hardware-software-codesign.html  analog-cim-ihw-patents.html  analog-cim-interview.html  analog-cim-mythic-videantis.html  analog-cim-mythic.css  analog-cim-quiz.html  analog-cim-quiz.js  analog-cim-reuse.css  analog-cim-reuse.js  analog-cim-scaleout-llm.html  analog-cim-scaleout.css  analog-cim-sdk-toolchain.html  analog-cim-tenstorrent-reuse.html  analog-cim.css  c-practice.html  deep-learning-practice.html  embedded-practice.html  git-practice.html  index.html  interview-practice.html  npu-architecture-performance-study.html  npu-engineering.css  npu-engineering.js  npu-framework-compiler-skills.html  npu-practice.html  npu-soc-software-architecture.html  npu.html  os-practice.html  (+3 more)
.github/workflows/: acim-minimal.yml  pages.yml
data/: analog-cim-architecture.json  analog-cim-evidence.json  analog-cim-mcq.json
examples/acim-minimal/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
examples/acim-minimal/apps/: acim_smoke.cpp
examples/acim-minimal/cmake/: ProjectOptions.cmake  build-manifest.txt.in
examples/acim-minimal/cmake/toolchains/: aarch64-linux-gnu.cmake
examples/acim-minimal/firmware/include/acim/: device_events.h  device_trace.h
examples/acim-minimal/include/acim/: profiling.hpp  simulator.hpp  trace_correlation.hpp
examples/acim-minimal/src/: simulator.cpp  trace_correlation.cpp
examples/acim-minimal/tests/: device_trace_c_test.c  simulator_gtest.cpp  simulator_test.cpp  trace_test.cpp
